[gd_scene load_steps=3 format=3 uid="uid://cwlh28vdl13vx"]

[ext_resource type="Script" path="res://addons/hego/control_dock.gd" id="1_xkvr4"]
[ext_resource type="Texture2D" uid="uid://3d40485bo5sw" path="res://addons/hego/icons/folder.svg" id="2_gb0af"]

[node name="HEGo" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xkvr4")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_direction = 2
layout_mode = 2

[node name="HoudiniDir" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "-> Houdini Install Dir"
alignment = 3
text_direction = 1

[node name="HoudiniDirFilePicker" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
icon = ExtResource("2_gb0af")

[node name="StartSession" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start Session"

[node name="StopSession" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Stop Session"

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a File or Directory"
size = Vector2i(500, 500)
ok_button_text = "Open"
file_mode = 3

[connection signal="pressed" from="VBoxContainer/HBoxContainer/HoudiniDirFilePicker" to="." method="_on_houdini_dir_file_picker_pressed"]
[connection signal="pressed" from="VBoxContainer/StartSession" to="." method="_on_start_session_pressed"]
[connection signal="pressed" from="VBoxContainer/StopSession" to="." method="_on_stop_session_pressed"]
[connection signal="dir_selected" from="FileDialog" to="." method="_on_file_dialog_dir_selected"]
